# notification-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_HOW_TO_USE_AND_TEST.md  README_STRUCTURE.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pre-commit.yml
admin_panel/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  requirements.txt
admin_panel/admin/: auth.py  jinja_setup.py
admin_panel/core/: config.py  db.py
admin_panel/generator/: __init__.py  recipients.py  templates.py
admin_panel/migration/: env.py
admin_panel/models/: __init__.py  base.py  campaign.py  campaign_recipient.py  history.py  message_template.py  recipient.py
architecture/uml_diagrams/: scheduled_message_delivery_uml_code
lint-report/: index.html  shared.__init__.report.html  shared.__init__.source.html  shared.exceptions.__init__.report.html  shared.exceptions.__init__.source.html  shared.models.__init__.report.html  shared.models.__init__.source.html  shared.utils.__init__.report.html  shared.utils.__init__.source.html  tests.__init__.report.html  tests.__init__.source.html  tests.conftest.report.html  tests.conftest.source.html  tests.unit.test_example.report.html  tests.unit.test_example.source.html  tests.unit.test_sample.report.html  tests.unit.test_sample.source.html
sentry/config/: sentry.conf.py
services/link-shortener/: Dockerfile  Makefile  README_TESTS_USE.md  docker-compose.yml  main.py  requirements-test.txt  requirements.txt
services/link_shortener/: Makefile  README_TESTS_USE.md  docker-compose.yml  main.py  requirements-test.txt  requirements.txt
services/notification-api/: main.py
services/notification_api/: Dockerfile  main.py  requirements.txt
services/websocket-server/: Dockerfile  main.py  requirements.txt  settings.py
services/worker/: Dockerfile  db.py  main.py  requirements.txt  senders.py  settings.py  utils.py
shared/enums/: delivery.py
shared/exceptions/: __init__.py  base.py
shared/models/: __init__.py  base.py  notification.py
shared/utils/: __init__.py
tests/: conftest.py  test_models.py
tests/actions/: test_ci.py
tests/infrastructure/: test_docker_compose.py
tests/unit/: test_ci.py  (+1 more)
(+40 files in other folders)
