[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notification-system"
version = "0.1.0"
description = "Notification system for cinema platform"
readme = "README.md"
authors = [
    {name = "Development Team", email = "dev@cinema.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "aioredis>=2.0.1",
    "aiormq>=6.7.0",
    "aio-pika>=9.3.0",
    "jinja2>=3.1.2",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "shortuuid>=1.0.11",
    "httpx>=0.25.2",
    "gunicorn>=21.2.0",
    "sentry-sdk[fastapi]>=1.39.1",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "wemake-python-styleguide>=0.18.0",
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "flake8-html>=0.4.3",
    "types-requests>=2.31.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[project.urls]
Homepage = "https://github.com/your-org/notification-system"
Repository = "https://github.com/your-org/notification-system"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true